--- a/server/package.json
+++ b/server/package.json
@@ -7,20 +7,20 @@
         "dev": "tsnd --exit-child --transpile-only src/main.ts"
     },
     "dependencies": {
-        "@mantine/form": "^5.2.3",
-        "@typegoose/typegoose": "^9.11.0",
+        "@mantine/form": "^5.2.5",
+        "@typegoose/typegoose": "^9.11.2",
         "argon2": "^0.29.1",
         "busboy": "^1.6.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
-        "helmet": "^5.1.1",
+        "helmet": "^6.0.0",
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.5.2",
+        "mongoose": "^6.5.4",
         "mongoose-slug-generator": "^1.0.4",
-        "nanoid": "^3.3.2",
+        "nanoid": "3.3.2",
         "node-fetch": "^2.6.1",
         "pino": "^8.4.2",
         "zod": "^3.18.0",
